# archive-assistant

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  install.sh  mise.toml
.github/workflows/: ci.yml  release.yml
archive-assistant/: Cargo.toml
archive-assistant/src/: archive.rs  main.rs  mtime.rs  state.rs
archive-repack/: Cargo.toml
archive-repack/src/: main.rs
archive-repack/tests/: integration.rs
docs/: ARCH.md
mise/tasks/: release
processor/: Cargo.toml
processor/src/: config.rs  dispatch.rs  lib.rs
zip-rewriter/: Cargo.toml
zip-rewriter/src/: main.rs
