[package]
name = "archive-assistant"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "archive-assistant"
path = "src/main.rs"

[dependencies]
processor    = { path = "../processor" }
clap         = { version = "4", features = ["derive"] }
walkdir      = "2"
zip          = "2"
lopdf        = "0.34"
rusqlite     = { version = "0.31", features = ["bundled"] }
libc         = "0.2"
anyhow       = "1"
tempfile     = "3"
rayon        = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif    = "0.17"
