[package]
name = "zip-rewriter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zip-rewriter"
path = "src/main.rs"

[dependencies]
processor    = { path = "../processor", features = ["clap"] }
clap         = { version = "4", features = ["derive"] }
zip          = "2"
tempfile     = "3"
anyhow       = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono       = "0.4"
